--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 h1, h2{
   color: black;
   font-size: 40px;
-  font-family: 'Square Peg', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 h3{
   color: red;
